--- a/src/app/containers/HomePage/HomePage.css
+++ b/src/app/containers/HomePage/HomePage.css
@@ -1,15 +1,15 @@
 .container-app {
     display: flex;
     flex: 1;
-    justify-content:  flex-end;
+    justify-content: flex-start;;
     flex-direction: row;
 }
 .right-side {
     display: flex;
     flex: 0.6;
     flex-direction: column;
-}
-.left-side {
+} 
+ .left-side {
     flex-direction: row-reverse;
     display: flex;
     flex: 0.4;
